[tool.poetry]
name = "big-data-visualization"
version = "0.1.0"
description = ""
authors = ["cynric_ni <cynric_ni@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#豆瓣 https://pypi.doubanio.com/simple/
#网易 https://mirrors.163.com/pypi/simple/
#阿里云 https://mirrors.aliyun.com/pypi/simple/
#清华大学 https://pypi.tuna.tsinghua.edu.cn/simple/

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
priority = "primary"